--- a/src/app/containers/default-header/default-header.component.html
+++ b/src/app/containers/default-header/default-header.component.html
@@ -3,7 +3,7 @@
     <c-header-brand class="d-none d-sm-block" routerLink="/"
       >Text Book Corporation</c-header-brand
     >
-    <c-header-brand class="d-sm-none" routerLink="/">DRS</c-header-brand>
+    <c-header-brand class="d-sm-none" routerLink="/">TBC</c-header-brand>
     <ul class="header-nav me-auto ms-5">
       <li class="nav-item active">
         <a
