--- a/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
+++ b/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
@@ -14,184 +14,153 @@
 </div>
 
 <div *ngIf="!isLoading && materialDistributionList">
-  <!-- <h3 class="mb-3">Purchase Order Details</h3>
-  <div
-    class="mb-3 gap-3 row d-flex align-items-center"
-    *ngIf="!isLoading && materialDistributionList"
-  >
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        PO No:
-        <span class="text-primary col-3">{{
-          materialDistributionList.purchaseOrder.id
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Status:
-        <span class="text-primary col-3">{{
-          materialDistributionList.purchaseOrder.status
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        PO Date:
-        <span class="text-primary">{{
-          materialDistributionList.purchaseOrder.po_date | date : "short"
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Region:
-        <span class="text-primary">{{
-          materialDistributionList.purchaseOrder.region
-            ? materialDistributionList.purchaseOrder.region
-            : "-"
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Godown:
-        <span class="text-primary">{{
-          materialDistributionList.purchaseOrder.godown
-            ? materialDistributionList.purchaseOrder.godown
-            : "-"
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Vendor Name:
-        <span class="text-primary">{{
-          materialDistributionList.purchaseOrder.vendor_name
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Vendor Address:<span class="text-primary">
-          {{
-            materialDistributionList.purchaseOrder.vendor_address
-              ? materialDistributionList.purchaseOrder.vendor_address
-              : "-"
-          }}</span
-        >
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        PO Days:<span class="text-primary">
-          {{ materialDistributionList.purchaseOrder.po_days }}</span
-        >
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Order Year:<span class="text-primary">
-          {{ materialDistributionList.purchaseOrder.order_year }}</span
-        >
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Target Date:<span class="text-primary">
-          {{
-            materialDistributionList.purchaseOrder.target_date | date : "short"
-          }}</span
-        >
-      </h6>
-    </div>
-  </div>
-  <hr /> -->
-
   <h3 class="mb-3 mt-4">Material Details</h3>
 
-  <div
-    class="mb-3 gap-3 row d-flex align-items-center"
-    *ngIf="!isLoading && materialDistributionList"
-  >
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5 d-flex gap-1">
-      <h6>Title:</h6>
-      <h6 class="text-primary w-auto">
-        {{ materialDistributionList.material.title }}
-      </h6>
+  <div class="row mt-4" *ngIf="materialDistributionList.material.id">
+    <div class="col-12 col-md-8 col-lg-5">
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Title</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.material.title
+              ? materialDistributionList.material.title
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Medium</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.material.medium
+              ? materialDistributionList.material.medium
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Size</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.material.size
+              ? materialDistributionList.material.size
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Type of Copies</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.material.type_of_copies
+              ? materialDistributionList.material.type_of_copies
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Order Year</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.purchaseOrder.order_year
+              ? materialDistributionList.purchaseOrder.order_year
+              : "-"
+          }}
+        </h6>
+      </div>
     </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Standard:
-        <span class="text-primary col-3">{{
-          materialDistributionList.material.standard
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Medium:
-        <span class="text-primary">{{
-          materialDistributionList.material.medium
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Net copies:
-        <span class="text-primary">{{
-          materialDistributionList.material.net_copies
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Size:
-        <span class="text-primary">{{
-          materialDistributionList.material.size
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Mode of printing:
-        <span class="text-primary">{{
-          materialDistributionList.material.mode_of_printing
-        }}</span>
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Type of copies:<span class="text-primary">
-          {{ materialDistributionList.material.type_of_copies }}</span
-        >
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        PO Days:<span class="text-primary">
-          {{ materialDistributionList.purchaseOrder.po_days }}</span
-        >
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Order Year:<span class="text-primary">
-          {{ materialDistributionList.purchaseOrder.order_year }}</span
-        >
-      </h6>
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-      <h6>
-        Target Date:<span class="text-primary">
+
+    <div class="col-12 col-md-8 col-lg-5">
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Standard</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.material.standard
+              ? materialDistributionList.material.standard
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Net Copies</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.material.net_copies
+              ? materialDistributionList.material.net_copies
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Mode of Printing</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.material.mode_of_printing
+              ? materialDistributionList.material.mode_of_printing
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>PO Days</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
+          {{
+            materialDistributionList.purchaseOrder.po_days
+              ? materialDistributionList.purchaseOrder.po_days
+              : "-"
+          }}
+        </h6>
+      </div>
+
+      <div class="row mb-2">
+        <div class="d-flex justify-content-between col-4">
+          <h6>Target Date</h6>
+          <h6>&#10132;</h6>
+        </div>
+        <h6 class="col-8 text-break text-primary">
           {{
             materialDistributionList.purchaseOrder.target_date
-              | date : "dd/MM/yyyy"
-          }}</span
-        >
-      </h6>
+              | date : "dd/MM/YYYY"
+          }}
+        </h6>
+      </div>
     </div>
   </div>
+
   <hr />
   <h3 class="mb-3 mt-4">Material Distributions</h3>
 
@@ -215,7 +184,7 @@
             <i class="text-info bi"></i>
           </th>
           <th scope="col">DL Type<i class="text-info bi"></i></th>
-          <th scope="col">Actions</th>
+          <th scope="col" class="text-center">Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -230,7 +199,7 @@
           <td>
             <div class="d-flex gap-3">
               <button
-                class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
+                class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder mx-auto"
                 title="View"
                 (click)="onViewMaterialDistributionDetails(material.id)"
                 [disabled]="material.delivery_status === 'None'"
