--- a/src/app/views/secure/purchase-orders/purchase-order-view/po-view.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-order-view/po-view.component.html
@@ -15,72 +15,109 @@
 
 <h3 class="mb-3">Purchase Order Details:</h3>
 
-<div
-  class="mb-3 gap-3 row d-flex align-items-center"
-  *ngIf="!isLoading && purchaseOrder.id"
->
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      PO No: <span class="text-primary col-3">{{ purchaseOrder.id }}</span>
-    </h6>
+<div class="row mt-4" *ngIf="purchaseOrder?.id">
+  <div class="col-12 col-md-8 col-lg-5">
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>PO No</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.id ? purchaseOrder.id : "-" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>PO Date</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.po_date | date : "dd/MM/yyyy" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>Godown</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.godown ? purchaseOrder.godown : "-" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>Vendor Address</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.vendor_address ? purchaseOrder.vendor_address : "-" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>Order Year</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.order_year ? purchaseOrder.order_year : "-" }}
+      </h6>
+    </div>
   </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      Status: <span class="text-primary col-3">{{ purchaseOrder.status }}</span>
-    </h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      PO Date:
-      <span class="text-primary">{{
-        purchaseOrder.po_date | date : "dd/MM/yyyy"
-      }}</span>
-    </h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      Region:
-      <span class="text-primary">{{
-        purchaseOrder.region ? purchaseOrder.region : "-"
-      }}</span>
-    </h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      Godown:
-      <span class="text-primary">{{
-        purchaseOrder.godown ? purchaseOrder.godown : "-"
-      }}</span>
-    </h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5 d-flex gap-1">
-    <h6 class="text-nowrap">Vendor Name:</h6>
-    <h6 class="text-primary w-auto">{{ purchaseOrder.vendor_name }}</h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5 d-flex gap-1">
-    <h6>Vendor Address:</h6>
-    <h6 class="text-primary w-auto">
-      {{ purchaseOrder.vendor_address ? purchaseOrder.vendor_address : "-" }}
-    </h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      PO Days:<span class="text-primary"> {{ purchaseOrder.po_days }}</span>
-    </h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      Order Year:<span class="text-primary">
-        {{ purchaseOrder.order_year }}</span
-      >
-    </h6>
-  </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-5">
-    <h6>
-      Target Date:<span class="text-primary">
-        {{ purchaseOrder.target_date | date : "dd/MM/yyyy" }}</span
-      >
-    </h6>
+
+  <div class="col-12 col-md-8 col-lg-5">
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>Status</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.status ? purchaseOrder.status : "-" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>Region</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.region ? purchaseOrder.region : "-" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>Vendor Name</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.vendor_name ? purchaseOrder.vendor_name : "-" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>PO Days</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.po_days ? purchaseOrder.po_days : "-" }}
+      </h6>
+    </div>
+
+    <div class="row mb-2">
+      <div class="d-flex justify-content-between col-4">
+        <h6>Target Date</h6>
+        <h6>&#10132;</h6>
+      </div>
+      <h6 class="col-8 text-break text-primary">
+        {{ purchaseOrder.target_date | date : "dd/MM/yyyy" }}
+      </h6>
+    </div>
   </div>
 </div>
 
