--- a/src/app/views/secure/branches/branches-list/branches-list.component.html
+++ b/src/app/views/secure/branches/branches-list/branches-list.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="table-responsive" *ngIf="!isLoading && branches?.length">
-  <table class="table table-hover text-center">
+  <table class="table table-hover">
     <thead class="bg-secondary">
       <tr>
         <th scope="col" class="curser-pointer">
@@ -53,7 +53,7 @@
         <!-- <td>{{ branch.created_at }}</td>
         <td>{{ branch.updated_at }}</td> -->
         <td>
-          <div class="d-flex gap-3 justify-content-center">
+          <div class="d-flex gap-3">
             <div
               class="bg-edit opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
               title="Edit"
