--- a/src/app/views/secure/users/users-list/users-list.component.html
+++ b/src/app/views/secure/users/users-list/users-list.component.html
@@ -11,7 +11,7 @@
   </button>
 </div>
 <div class="table-responsive" *ngIf="!isLoading && users?.length">
-  <table class="table table-hover text-center">
+  <table class="table table-hover">
     <thead class="bg-secondary">
       <tr>
         <th scope="col" class="curser-pointer">
@@ -44,7 +44,7 @@
         <td>{{ user.role }}</td>
         <td>{{ user.branch_name }}</td>
         <td>
-          <div class="d-flex gap-3 justify-content-center">
+          <div class="d-flex gap-3">
             <div
               class="bg-edit opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
               title="Edit"
