--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -1,15 +1,32 @@
-<h3 class="mb-3">Purchase Orders</h3>
-<div class="input-group w-25 mb-3">
-  <input
-    type="search"
-    class="form-control"
-    placeholder="Search"
-    [(ngModel)]="searchKeyWord"
-    (ngModelChange)="this.onSearchKeyWordChange.next($event)"
-  />
-  <button class="btn btn-secondary" type="button">
-    <i class="fa fa-search"></i>
-  </button>
+<div class="d-flex justify-content-between mb-3">
+  <div class="input-group w-25 d-flex flex-column">
+    <h3 class="mb-3">Purchase Orders</h3>
+    <div class="d-flex">
+      <input
+        type="search"
+        class="form-control input"
+        placeholder="Search"
+        [(ngModel)]="searchKeyWord"
+        (ngModelChange)="this.onSearchKeyWordChange.next($event)"
+      />
+      <button class="btn btn-secondary input-button" type="button">
+        <i class="fa fa-search"></i>
+      </button>
+    </div>
+  </div>
+  <div class="d-flex align-items-center">
+    <button
+      cButton
+      class="download-button"
+      variant="outline"
+      color="info"
+      type="button"
+      (click)="onDownloadPoDetails()"
+    >
+      Download Report
+      <i class="ms-1 fa fa-download"></i>
+    </button>
+  </div>
 </div>
 <div class="table-responsive">
   <table class="table table-hover">
