Fix: download-loader

--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -22,6 +22,7 @@
       color="info"
       type="button"
       (click)="onDownloadPoDetails()"
+      [disabled]="isPODownloading"
     >
       Download Report
       <i class="ms-1 fa fa-download"></i>
