--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.scss
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.scss
@@ -32,6 +32,15 @@
   border: none;
 }
 
+.input {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+.input-button {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
 select {
   font-size: 16px;
   padding: 4px;
