--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -2,7 +2,7 @@
 <div class="wrapper d-flex flex-column min-vh-100 bg-light dark:bg-transparent">
   <!--app-header-->
   <app-default-header
-    class="mb-4 d-print-none header header-sticky px-sm-3 px-lg-4 px-xxl-5"
+    class="mb-4 d-print-none header header-sticky p-0"
     position="sticky"
     sidebarId="sidebar"
   ></app-default-header>
