--- a/src/app/containers/default-header/default-header.component.scss
+++ b/src/app/containers/default-header/default-header.component.scss
@@ -19,7 +19,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #ccc;
+  background-color: #75838e;
   font-size: 20px;
   font-weight: bold;
   color: #fff;
