--- a/src/app/containers/default-header/default-header.component.html
+++ b/src/app/containers/default-header/default-header.component.html
@@ -16,7 +16,7 @@
               cNavLink
               routerLink="/purchase_orders"
               routerLinkActive="active"
-              class="nav-route-item ms-lg-4 nav-link"
+              class="nav-route-item ms-lg-4"
               >Purchase Orders</a
             >
           </c-nav-item>
