--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -1,32 +1,41 @@
-<div class="d-flex justify-content-between mb-3">
-  <div class="input-group w-25 d-flex flex-column">
-    <h3 class="mb-3">Purchase Orders</h3>
-    <div class="d-flex">
-      <input
-        type="search"
-        class="form-control input"
-        placeholder="Search"
-        [(ngModel)]="searchKeyWord"
-        (ngModelChange)="this.onSearchKeyWordChange.next($event)"
-      />
-      <button class="btn btn-secondary input-button" type="button">
-        <i class="fa fa-search"></i>
+<div class="mb-3">
+  <div class="input-group row">
+    <div class="d-flex flex-column flex-sm-row justify-content-sm-between mb-3">
+      <h3>Purchase Orders</h3>
+    </div>
+    <div class="d-flex flex-column flex-sm-row justify-content-sm-between">
+      <div class="col-12 col-sm-6 col-md-5 col-lg-4 d-flex">
+        <input
+          type="search"
+          class="form-control input"
+          placeholder="Search"
+          [(ngModel)]="searchKeyWord"
+          (ngModelChange)="this.onSearchKeyWordChange.next($event)"
+          onkeypress="return event.charCode !== 32 || this.value.trim().length !== 0"
+        />
+        <button class="btn btn-secondary input-button" type="button">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+      <button
+        cButton
+        variant="outline"
+        class="mt-2"
+        color="info"
+        type="button"
+        title="Download PO Report as Excel"
+        (click)="onDownloadPoDetails()"
+        [disabled]="isPODownloading"
+      >
+        Download Report
+        <i
+          class="ms-1"
+          [ngClass]="
+            isPODownloading ? 'fa fa-spinner fa-spin' : 'fa fa-download'
+          "
+        ></i>
       </button>
     </div>
-  </div>
-  <div class="d-flex align-items-center">
-    <button
-      cButton
-      class="download-button"
-      variant="outline"
-      color="info"
-      type="button"
-      (click)="onDownloadPoDetails()"
-      [disabled]="isPODownloading"
-    >
-      Download Report
-      <i class="ms-1 fa fa-download"></i>
-    </button>
   </div>
 </div>
 <div class="table-responsive">
