--- a/src/app/views/secure/users/users-add/users-add.component.html
+++ b/src/app/views/secure/users/users-add/users-add.component.html
@@ -2,13 +2,13 @@
   <form
     [formGroup]="addUserForm"
     (submit)="onFormSubmit()"
-    class="mt-3 w-75"
+    class="mt-3 w-lg-75"
     autocomplete="off"
   >
     <div class="card">
       <div class="card-header">
-        <div class="row">
-          <div class="col order-1 order-sm-0">
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
             <button
               class="btn btn-primary d-flex align-items-center"
               type="button"
@@ -22,10 +22,10 @@
               <span class="text ml-1 ml-sm-o d-none d-sm-block">Back</span>
             </button>
           </div>
-          <div class="col-12 col-sm-auto order-0 order-sm-1">
-            <h2 class="text-center">Add User</h2>
-          </div>
-          <div class="col order-2 text-end">
+
+          <h2 class="text-center m-0">Add User</h2>
+
+          <div>
             <app-loading-button
               [disabled]="addUserForm.invalid"
               [buttonText]="'Add User'"
@@ -89,7 +89,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6">
+          <div class="form-group col-12 col-md-6 mt-2 mt-sm-0">
             <label for="lastName">
               Last Name <span class="text-danger">*</span></label
             >
@@ -127,7 +127,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-4">
+          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4">
             <label for="email"
               >Email Address <span class="text-danger">*</span></label
             >
@@ -155,7 +155,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-4">
+          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4">
             <label for="branch"
               >Branch Name<span class="text-danger">*</span></label
             >
