--- a/src/app/views/secure/branches/branches-add/branches-add.component.html
+++ b/src/app/views/secure/branches/branches-add/branches-add.component.html
@@ -2,7 +2,7 @@
   <form
     [formGroup]="addBranchForm"
     (submit)="onFormSubmit()"
-    class="mt-3 w-lg-75"
+    class="mt-3"
     autocomplete="off"
   >
     <div class="card">
@@ -82,7 +82,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-0">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-0">
             <label for="address">
               Address <span class="text-danger">*</span></label
             >
@@ -113,7 +113,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-sm-4 mt-2">
+          <div class="form-group col-12 col-md-6 mt-md-4 mt-2">
             <label for="dl_type"
               >DL type <span class="text-danger">*</span></label
             >
@@ -137,7 +137,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-sm-4 mt-2">
+          <div class="form-group col-12 col-md-6 mt-md-4 mt-2">
             <label for="district_id"
               >District Name<span class="text-danger">*</span></label
             >
