--- a/src/app/views/secure/branches/branches-edit/branch-edit.component.html
+++ b/src/app/views/secure/branches/branches-edit/branch-edit.component.html
@@ -2,7 +2,7 @@
   <form
     [formGroup]="editBranchForm"
     (submit)="onFormSubmit()"
-    class="mt-3 w-lg-75"
+    class="mt-3"
     autocomplete="off"
   >
     <div class="card">
@@ -80,7 +80,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-0">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-0">
             <label for="address">
               Address <span class="text-danger">*</span></label
             >
@@ -111,7 +111,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4">
             <label for="dl_type"
               >DL type <span class="text-danger">*</span></label
             >
@@ -135,7 +135,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4">
             <label for="district_id"
               >District Name<span class="text-danger">*</span></label
             >
