--- a/src/app/views/secure/users/users-add/users-add.component.html
+++ b/src/app/views/secure/users/users-add/users-add.component.html
@@ -2,7 +2,7 @@
   <form
     [formGroup]="addUserForm"
     (submit)="onFormSubmit()"
-    class="mt-3 w-lg-75"
+    class="mt-3"
     autocomplete="off"
   >
     <div class="card">
@@ -89,7 +89,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-0">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-0">
             <label for="lastName">
               Last Name <span class="text-danger">*</span></label
             >
@@ -127,7 +127,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4">
             <label for="email"
               >Email Address <span class="text-danger">*</span></label
             >
@@ -155,7 +155,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4">
             <label for="branch"
               >Branch Name<span class="text-danger">*</span></label
             >
