--- a/src/app/views/secure/users/users-edit/users-edit.component.html
+++ b/src/app/views/secure/users/users-edit/users-edit.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center">
-  <form [formGroup]="editUserForm" class="mt-3 w-lg-75" autocomplete="off">
+  <form [formGroup]="editUserForm" class="mt-3" autocomplete="off">
     <div class="card">
       <div class="card-header">
         <div class="d-flex justify-content-between align-items-center">
@@ -99,7 +99,7 @@
             </div>
           </div>
 
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-0">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-0">
             <label for="lastName">
               Last Name <span class="text-danger">*</span></label
             >
@@ -137,7 +137,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4 opacity-75">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4 opacity-75">
             <label for="email"
               >Email Address <span class="text-danger">*</span></label
             >
@@ -150,7 +150,7 @@
               name="email"
             />
           </div>
-          <div class="form-group col-12 col-md-6 mt-2 mt-sm-4 opacity-75">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4 opacity-75">
             <label for="vendor"
               >Branch Name <span class="text-danger">*</span></label
             >
