--- a/src/app/views/secure/branches/branches-add/branches-add.component.html
+++ b/src/app/views/secure/branches/branches-add/branches-add.component.html
@@ -2,13 +2,13 @@
   <form
     [formGroup]="addBranchForm"
     (submit)="onFormSubmit()"
-    class="mt-3 w-75"
+    class="mt-3"
     autocomplete="off"
   >
     <div class="card">
       <div class="card-header">
-        <div class="row">
-          <div class="col order-1 order-sm-0">
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
             <button
               class="btn btn-primary d-flex align-items-center"
               type="button"
@@ -22,10 +22,10 @@
               <span class="text ml-1 ml-sm-o d-none d-sm-block">Back</span>
             </button>
           </div>
-          <div class="col-12 col-sm-auto order-0 order-sm-1">
-            <h2 class="text-center">Add Branch</h2>
-          </div>
-          <div class="col order-2 text-end">
+
+          <h2 class="text-center m-0">Add Branch</h2>
+
+          <div>
             <app-loading-button
               [disabled]="addBranchForm.invalid"
               [buttonText]="'Add Branch'"
@@ -82,7 +82,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-0">
             <label for="address">
               Address <span class="text-danger">*</span></label
             >
@@ -113,7 +113,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-4">
+          <div class="form-group col-12 col-md-6 mt-md-4 mt-2">
             <label for="dl_type"
               >DL type <span class="text-danger">*</span></label
             >
@@ -137,7 +137,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-4">
+          <div class="form-group col-12 col-md-6 mt-md-4 mt-2">
             <label for="district_id"
               >District Name<span class="text-danger">*</span></label
             >
