--- a/src/app/views/secure/users/users-edit/users-edit.component.html
+++ b/src/app/views/secure/users/users-edit/users-edit.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex justify-content-center">
-  <form [formGroup]="editUserForm" class="mt-3 w-75" autocomplete="off">
+  <form [formGroup]="editUserForm" class="mt-3" autocomplete="off">
     <div class="card">
       <div class="card-header">
-        <div class="row">
-          <div class="col order-1 order-sm-0">
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
             <button
               class="btn btn-primary d-flex align-items-center"
               title="Back"
@@ -16,10 +16,10 @@
               <span class="text ml-1 ml-sm-o d-none d-sm-block">Back</span>
             </button>
           </div>
-          <div class="col-12 col-sm-auto order-0 order-sm-1">
-            <h2 class="text-center">Update User</h2>
-          </div>
-          <div class="col order-2 text-end">
+
+          <h2 class="text-center m-0">Update User</h2>
+
+          <div>
             <app-loading-button
               *ngIf="hasUser"
               [disabled]="editUserForm.invalid || editUserForm.pristine"
@@ -99,7 +99,7 @@
             </div>
           </div>
 
-          <div class="form-group col-12 col-md-6">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-0">
             <label for="lastName">
               Last Name <span class="text-danger">*</span></label
             >
@@ -137,7 +137,7 @@
               >
             </div>
           </div>
-          <div class="form-group col-12 col-md-6 mt-4 opacity-75">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4 opacity-75">
             <label for="email"
               >Email Address <span class="text-danger">*</span></label
             >
@@ -150,7 +150,7 @@
               name="email"
             />
           </div>
-          <div class="form-group col-12 col-md-6 mt-4 opacity-75">
+          <div class="form-group col-12 col-md-6 mt-2 mt-md-4 opacity-75">
             <label for="vendor"
               >Branch Name <span class="text-danger">*</span></label
             >
